added updated annotated notebooks

--- a/jla_sne_marginalized.ipynb
+++ b/jla_sne_marginalized.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import stuff"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,105 +28,106 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### SET UP THE PRIOR ###\n",
-    "\n",
-    "# Prior over theta (interesting parameters)\n",
-    "lower = np.array([0, -1.5])\n",
-    "upper = np.array([0.6, 0])\n",
-    "prior_covariance = np.diag([0.4, 0.75])**2\n",
-    "prior_covariance[0,1] = prior_covariance[1,0] = -0.8*0.4*0.75\n",
-    "prior_mean = np.array([  0.3  ,  -0.75])\n",
-    "prior = priors.TruncatedGaussian(prior_mean, prior_covariance, lower, upper)\n",
-    "\n",
-    "# Prior over eta (nuisances)\n",
-    "eta_lower = np.array([-20, 0, 0, -0.5])\n",
-    "eta_upper = np.array([-18, 1, 6, 0.5])\n",
-    "eta_mean = np.array([-19.05 ,   0.125,   2.6  ,  -0.05 ])\n",
-    "eta_covariance = np.diag([0.1, 0.025, 0.25, 0.05])**2\n",
-    "eta_prior = priors.TruncatedGaussian(eta_mean, eta_covariance, eta_lower, eta_upper)\n",
-    "\n",
-    "# Joint prior over nuisances and interesting parameters\n",
-    "joint_lower = np.concatenate([lower, eta_lower])\n",
-    "joint_upper = np.concatenate([upper, eta_upper])\n",
-    "joint_mean = np.concatenate([prior_mean, eta_mean])\n",
-    "joint_covariance = block_diag(prior_covariance, eta_covariance)\n",
-    "joint_prior = priors.TruncatedGaussian(joint_mean, \n",
-    "                                       joint_covariance,\n",
-    "                                       joint_lower,\n",
-    "                                       joint_upper)"
+    "## Set up the prior\n",
+    "In this case, we need to set up priors over interesting and nuisance parameters. The nuisance parameter prior could be conditional on the interesting parameters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### SET UP FOR SIMULATION CODE ###\n",
+    "lower = np.array([0, -1.5])\n",
+    "upper = np.array([0.6, 0])\n",
+    "prior = priors.Uniform(lower, upper)\n",
     "\n",
+    "eta_lower = np.array([-20, 0, 0, -0.5])\n",
+    "eta_upper = np.array([-18, 1, 6, 0.5])\n",
+    "eta_prior = priors.Uniform(eta_lower, eta_upper)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set up the simulator\n",
+    "This must have the signature `simulator(parameters, seed, args, batch)` -> `np.array([batch, ndata])`\n",
+    "\n",
+    "Note: In this case since we are going to infer the nuisance parameter marginalized posterior directly, the simulator takes in interesting parameters only, and draws nuisance parameters from their prior _as part of the simulation process_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/justinalsing/Dropbox/science/delfi/development/pydelfi/simulators/jla_supernovae/jla_parser.py:9: VisibleDeprecationWarning: Reading unicode strings without specifying the encoding argument is deprecated. Set the encoding, use None for the system default.\n",
+      "  dtype = None, names = True)\n"
+     ]
+    }
+   ],
+   "source": [
     "JLASimulator = jla.JLA_Model()\n",
     "\n",
-    "# Simulator function: This must be of the form simulator(theta, seed, args) -> simulated data vector\n",
     "def simulator(theta, seed, simulator_args, batch):\n",
     "    \n",
-    "    # Draw nuisances from prior\n",
     "    eta_prior = simulator_args[0]\n",
     "    eta = eta_prior.draw()\n",
     "    \n",
     "    return JLASimulator.simulation(np.concatenate([theta, eta]), seed)\n",
     "\n",
-    "# Arguments for simulator\n",
     "simulator_args = [eta_prior]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set up the compressor\n",
+    "This must have the signature `compressor(data, args)` -> `np.array([n_summaries])`\n",
+    "In this case we are going to do _nuisance hardened_ Gaussian score compression $$\\bar{\\mathbf{t}}_\\theta = \\mathbf{t}_\\theta - \\mathbf{F}_{\\theta\\eta}\\mathbf{F}^{-1}_{\\eta\\eta}\\mathbf{t}_\\eta$$ where $$\\mathbf{t}_{(\\theta, \\eta)} = \\nabla_{(\\theta, \\eta)}^T\\boldsymbol\\mu_*\\mathbf{C}^{-1}(\\mathbf{d}-\\boldsymbol\\mu_*)$$\n",
+    "We'll use the class `score.Gaussian`. For this we'll need some fiducial parameters, the mean its derivative at the fiducial parameters, the inverse covariance, and the inverse Fisher matrix"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### SET UP THE COMPRESSOR ###\n",
+    "theta_fiducial = np.array([0.2, -0.75])\n",
+    "eta_fiducial = np.array([-19.04, 0.125, 2.64, -0.05])\n",
     "\n",
-    "# Fiducial parameters\n",
-    "theta_fiducial = np.array([0.20181324,  -0.74762939])\n",
-    "eta_fiducial = np.array([-19.04253368,   0.12566322,   2.64387045, -0.05252869])\n",
-    "\n",
-    "# Expected data (mean) and covariance\n",
     "mu = JLASimulator.apparent_magnitude(np.concatenate([theta_fiducial, eta_fiducial]))\n",
     "Cinv = JLASimulator.Cinv\n",
     "\n",
-    "# Calculate derivatives of the expected power spectrum\n",
     "h = np.array(abs(np.concatenate([theta_fiducial, eta_fiducial])))*0.01\n",
     "dmudt = JLASimulator.dmudt(np.concatenate([theta_fiducial, eta_fiducial]), h)\n",
     "\n",
-    "# Define compression as score-MLE of a Wishart likelihood\n",
-    "Compressor = score.Gaussian(len(JLASimulator.data), np.concatenate([theta_fiducial, eta_fiducial]), mu = mu, Cinv = Cinv, dmudt = dmudt, prior_mean = joint_mean, prior_covariance = joint_covariance)\n",
+    "Compressor = score.Gaussian(len(JLASimulator.data), np.concatenate([theta_fiducial, eta_fiducial]), \n",
+    "                            mu = mu, Cinv = Cinv, dmudt = dmudt)\n",
     "\n",
-    "# Compute the Fisher matrix\n",
     "Compressor.compute_fisher()\n",
-    "\n",
-    "# Pull out Fisher matrix inverse\n",
     "Finv = Compressor.Finv[0:2,0:2]\n",
     "\n",
-    "# Compressor function: This must have the form compressor(data, args) -> compressed summaries (pseudoMLE)\n",
     "def compressor(d, compressor_args):\n",
     "    return Compressor.projected_scoreMLE(d, np.arange(2,6))\n",
     "compressor_args = None"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Compress the JLA data ###\n",
-    "compressed_data = compressor(JLASimulator.data, compressor_args)"
+    "## Compress the JLA data"
    ]
   },
   {
@@ -128,16 +136,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create ensemble of NDEs\n",
+    "compressed_data = compressor(JLASimulator.data, compressor_args)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create endemble of NDEs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "NDEs = [ndes.ConditionalMaskedAutoregressiveFlow(n_parameters=2, n_data=2, n_hiddens=[50,50], n_mades=5, act_fun=tf.tanh, index=0),\n",
     "        ndes.MixtureDensityNetwork(n_parameters=2, n_data=2, n_components=1, n_hidden=[30,30], activations=[tf.tanh, tf.tanh], index=1),\n",
     "        ndes.MixtureDensityNetwork(n_parameters=2, n_data=2, n_components=2, n_hidden=[30,30], activations=[tf.tanh, tf.tanh], index=2),\n",
     "        ndes.MixtureDensityNetwork(n_parameters=2, n_data=2, n_components=3, n_hidden=[30,30], activations=[tf.tanh, tf.tanh], index=3),\n",
     "        ndes.MixtureDensityNetwork(n_parameters=2, n_data=2, n_components=4, n_hidden=[30,30], activations=[tf.tanh, tf.tanh], index=4),\n",
-    "        ndes.MixtureDensityNetwork(n_parameters=2, n_data=2, n_components=5, n_hidden=[30,30], activations=[tf.tanh, tf.tanh], index=5)]\n",
-    "\n",
-    "\n",
-    "# Create the DELFI object\n",
+    "        ndes.MixtureDensityNetwork(n_parameters=2, n_data=2, n_components=5, n_hidden=[30,30], activations=[tf.tanh, tf.tanh], index=5)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create DELFI object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "DelfiEnsemble = delfi.Delfi(compressed_data, prior, NDEs, Finv = Finv, theta_fiducial = theta_fiducial, \n",
     "                       param_limits = [lower, upper],\n",
     "                       param_names = ['\\Omega_m', 'w_0'], \n",
@@ -146,36 +181,161 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fisher pre-training to initialize the networks"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e68cadb1e810442598a1aea84fd6d082",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Training', max=300, style=ProgressStyle(description_width='in…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "19dee422adf0456ca510871634111b14",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Training', max=300, style=ProgressStyle(description_width='in…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "da058fe18e134f44b19402e55895bda9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Training', max=300, style=ProgressStyle(description_width='in…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "939ebce7ed284004afb1f4705845dbad",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Training', max=300, style=ProgressStyle(description_width='in…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e8c8844f847b4047918f9fdc731ff3ea",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Training', max=300, style=ProgressStyle(description_width='in…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "79ccaf1b6f32453f8f27142a6093aa05",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Training', max=300, style=ProgressStyle(description_width='in…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Do the Fisher pre-training\n",
     "DelfiEnsemble.fisher_pretraining()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Initial samples, batch size for population samples, number of populations\n",
-    "n_initial = 100\n",
-    "n_batch = 100\n",
-    "n_populations = 11\n",
-    "\n",
-    "# Do the SNL training\n",
-    "DelfiEnsemble.sequential_training(simulator, compressor, n_initial, n_batch, n_populations, patience=10, simulator_args=simulator_args)"
+    "## Sequential Neural Likeihood"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6685aaa441704383a63c06ddf2042b14",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Simulations', max=99, style=ProgressStyle(description_width='…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulator returns exception for parameter values: [ 0.23579188 -0.75830386] (rank 0)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "70f7b6aeb6af4b8aa61730461873eb09",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Training', max=300, style=ProgressStyle(description_width='in…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "n_initial = 100\n",
+    "n_batch = 100\n",
+    "n_populations = 11\n",
+    "\n",
+    "DelfiEnsemble.sequential_training(simulator, compressor, n_initial, n_batch, n_populations, patience=10, simulator_args=simulator_args)"
+   ]
   }
  ],
  "metadata": {
