--- a/jla_sne.ipynb
+++ b/jla_sne.ipynb
@@ -1,126 +1,188 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Import your stuff"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import simulators.jla_supernovae.jla_simulator as jla\n",
     "import ndes.ndes as ndes\n",
     "import delfi.delfi as delfi\n",
     "import compression.score.score as score\n",
     "import distributions.priors as priors\n",
     "import tensorflow as tf\n",
-    "import getdist\n",
-    "from getdist import plots, MCSamples\n",
-    "tf.logging.set_verbosity(tf.logging.ERROR)\n",
-    "%matplotlib inline"
+    "tf.logging.set_verbosity(tf.logging.ERROR)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Set up the simulator\n",
+    "This must have the signature `simulator(parameters, seed, args, batch)` -> `np.array([batch, ndata])`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/justinalsing/Dropbox/science/delfi/development/pydelfi/simulators/jla_supernovae/jla_parser.py:9: VisibleDeprecationWarning: Reading unicode strings without specifying the encoding argument is deprecated. Set the encoding, use None for the system default.\n",
+      "  dtype = None, names = True)\n"
+     ]
+    }
+   ],
    "source": [
-    "### SET UP FOR SIMULATION CODE ###\n",
-    "\n",
-    "# Set up the model (imports covariance matrices etc)\n",
     "JLASimulator = jla.JLA_Model()\n",
     "\n",
-    "# Simulator function: This must be of the form simulator(theta, seed, args) -> simulated data vector\n",
     "def simulator(theta, seed, simulator_args, batch):\n",
     "    \n",
     "    return JLASimulator.simulation(theta, seed)\n",
     "\n",
-    "# Simulator arguments\n",
     "simulator_args = None"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "### SET UP THE PRIOR ###\n",
-    "\n",
-    "# Define prior limits and boundaries\n",
-    "lower = np.array([0, -1.5, -20, 0, 0, -0.5])\n",
-    "upper = np.array([0.6, 0, -18, 1, 6, 0.5])\n",
-    "prior_covariance = np.diag([0.4, 0.75, 0.1, 0.025, 0.25, 0.05])**2\n",
-    "prior_covariance[0,1] = prior_covariance[1,0] = -0.8*0.4*0.75\n",
-    "prior_mean = np.array([  0.3  ,  -0.75 , -19.05 ,   0.125,   2.6  ,  -0.05 ])\n",
-    "prior = priors.TruncatedGaussian(prior_mean, prior_covariance, lower, upper)"
+    "## Set up the prior"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### SET UP THE COMPRESSOR ###\n",
+    "lower = np.array([0, -1.5, -20, 0, 0, -0.5])\n",
+    "upper = np.array([0.6, 0, -18, 1, 6, 0.5])\n",
+    "prior = priors.Uniform(lower, upper)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Set up the compressor\n",
+    "Must have the signature `compressor(data, args)` -> `np.array([n_summaries])`<br>\n",
+    "In this case we are going to do Gaussian score compression $$\\mathbf{t} = \\boldsymbol\\theta_* + \\mathbf{F}^{-1}\\nabla_\\theta^T\\boldsymbol\\mu_*\\mathbf{C}^{-1}(\\mathbf{d}-\\boldsymbol\\mu_*)$$ using the class `score.Gaussian`. For this we'll need some fiducial parameters, the mean its derivative at the fiducial parameters, the inverse covariance, and the inverse Fisher matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "theta_fiducial = np.array([0.2, -0.75, -19.05, 0.125, 2.65, -0.05])\n",
     "\n",
-    "# Fiducial parameters\n",
-    "theta_fiducial = np.array([  0.20181324,  -0.74762939, -19.04253368,   0.12566322,   2.64387045, -0.05252869])\n",
-    "\n",
-    "# Expected data (mean) and covariance\n",
     "mu = JLASimulator.apparent_magnitude(theta_fiducial)\n",
     "Cinv = JLASimulator.Cinv\n",
     "\n",
-    "# Calculate derivatives of the expected power spectrum\n",
     "h = np.array(abs(theta_fiducial))*0.01\n",
     "dmudt = JLASimulator.dmudt(theta_fiducial, h)\n",
     "\n",
-    "# Define compression as score-MLE of a Wishart likelihood\n",
-    "Compressor = score.Gaussian(len(JLASimulator.data), theta_fiducial, mu = mu, Cinv = Cinv, dmudt = dmudt, prior_mean = prior_mean, prior_covariance = prior_covariance)\n",
-    "\n",
-    "# Compute the Fisher matrix\n",
+    "Compressor = score.Gaussian(len(JLASimulator.data), theta_fiducial, mu = mu, Cinv = Cinv, dmudt = dmudt)\n",
     "Compressor.compute_fisher()\n",
-    "\n",
-    "# Pull out Fisher matrix inverse\n",
     "Finv = Compressor.Finv\n",
     "\n",
-    "# Compressor function: This must have the form compressor(data, args) -> compressed summaries (pseudoMLE)\n",
     "def compressor(d, compressor_args):\n",
     "    return Compressor.scoreMLE(d)\n",
-    "compressor_args = None"
+    "compressor_args=None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Load in the compressed data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### LOAD IN THE DATA VECTOR ###\n",
     "compressed_data = compressor(JLASimulator.data, compressor_args)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Define ensemble of NDEs"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create ensemble of NDEs\n",
     "NDEs = [ndes.MixtureDensityNetwork(n_parameters=6, n_data=6, n_components=1, n_hidden=[30,30], activations=[tf.tanh, tf.tanh], index=0),\n",
     "       ndes.MixtureDensityNetwork(n_parameters=6, n_data=6, n_components=2, n_hidden=[30,30], activations=[tf.tanh, tf.tanh], index=1),\n",
     "       ndes.MixtureDensityNetwork(n_parameters=6, n_data=6, n_components=3, n_hidden=[30,30], activations=[tf.tanh, tf.tanh], index=2),\n",
     "       ndes.MixtureDensityNetwork(n_parameters=6, n_data=6, n_components=4, n_hidden=[30,30], activations=[tf.tanh, tf.tanh], index=3),\n",
     "       ndes.MixtureDensityNetwork(n_parameters=6, n_data=6, n_components=5, n_hidden=[30,30], activations=[tf.tanh, tf.tanh], index=4),\n",
-    "       ndes.ConditionalMaskedAutoregressiveFlow(n_parameters=6, n_data=6, n_hiddens=[50,50], n_mades=5, act_fun=tf.tanh, index=5)]\n",
-    "\n",
-    "# Create the DELFI object\n",
-    "DelfiEnsemble = delfi.Delfi(compressed_data, prior, NDEs, Finv=Finv, theta_fiducial=theta_fiducial, \n",
-    "                       param_limits = [lower, upper],\n",
-    "                       param_names = ['\\\\Omega_m', 'w_0', 'M_\\mathrm{B}', '\\\\alpha', '\\\\beta', '\\\\delta M'], \n",
-    "                       results_dir = \"simulators/jla_supernovae/results/\",\n",
-    "                       input_normalization=\"fisher\")"
+    "       ndes.ConditionalMaskedAutoregressiveFlow(n_parameters=6, n_data=6, n_hiddens=[50,50], n_mades=5, act_fun=tf.tanh, index=5)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Create DELFI object"
    ]
   },
   {
@@ -129,28 +191,181 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Do the Fisher pre-training\n",
+    "DelfiEnsemble = delfi.Delfi(compressed_data, prior, NDEs, \n",
+    "                            Finv = Finv, \n",
+    "                            theta_fiducial = theta_fiducial, \n",
+    "                            param_limits = [lower, upper],\n",
+    "                            param_names = ['\\\\Omega_m', 'w_0', 'M_\\mathrm{B}', '\\\\alpha', '\\\\beta', '\\\\delta M'], \n",
+    "                            results_dir = \"simulators/jla_supernovae/results/\",\n",
+    "                            input_normalization=\"fisher\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Fisher pre-training to initialize the NDEs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ff67905dcba04b30869d7b1cccd0f246",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Training', max=300, style=ProgressStyle(description_width='in…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "42c556948967493ea57af259735028e8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Training', max=300, style=ProgressStyle(description_width='in…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8105a2f6d9964cdfb249c62509eb69e2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Training', max=300, style=ProgressStyle(description_width='in…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b7ae8491e6014f05bda5b775b9b8eb07",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Training', max=300, style=ProgressStyle(description_width='in…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2710e2a2e3fc4747859f47419fa6cb0d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Training', max=300, style=ProgressStyle(description_width='in…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "30bf1d69632d4274a42b7be37fdc9ef3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Training', max=300, style=ProgressStyle(description_width='in…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "DelfiEnsemble.fisher_pretraining()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Sequential Neural Likelihood"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initial samples, batch size for population samples, number of populations\n",
     "n_initial = 200\n",
     "n_batch = 200\n",
-    "n_populations = 5\n",
+    "n_populations = 10\n",
     "\n",
-    "# Do the SNL training\n",
-    "DelfiEnsemble.sequential_training(simulator, compressor, n_initial, n_batch, n_populations, patience=10,\n",
-    "                       save_intermediate_posteriors=True)"
+    "DelfiEnsemble.sequential_training(simulator, compressor, n_initial, n_batch, n_populations, patience=20,\n",
+    "                       save_intermediate_posteriors=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sample the learned posterior"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "posterior_samples = DelfiEnsemble.emcee_sample()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Alright let's plot it!\n",
+    "Feed it a list of `(n_samples, n_parameters)` arrays for making a triangle plot; in this case let's just plot the posterior samples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DelfiEnsemble.triangle_plot(samples=[posterior_samples])"
    ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
