--- a/examples/cosmic_shear_prerun_sims.ipynb
+++ b/examples/cosmic_shear_prerun_sims.ipynb
@@ -19,8 +19,8 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import distributions.priors as priors\n",
-    "import ndes.ndes as ndes\n",
+    "import delfi.distributions.priors as priors\n",
+    "import delfi.ndes.ndes as ndes\n",
     "import delfi.delfi as delfi\n",
     "import tensorflow as tf\n",
     "tf.logging.set_verbosity(tf.logging.ERROR)\n",
