--- a/examples/jla_sne_marginalized.ipynb
+++ b/examples/jla_sne_marginalized.ipynb
@@ -16,11 +16,11 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.interpolate as interpolate\n",
-    "import delfi.simulators.jla_supernovae.jla_simulator as jla\n",
-    "import delfi.ndes.ndes as ndes\n",
-    "import delfi.delfi as delfi\n",
-    "import delfi.compression.score.score as score\n",
-    "import delfi.distributions.priors as priors\n",
+    "import pydelfi.simulators.jla_supernovae.jla_simulator as jla\n",
+    "import pydelfi.ndes.ndes as ndes\n",
+    "import pydelfi as delfi\n",
+    "import pydelfi.compression.score.score as score\n",
+    "import pydelfi.distributions.priors as priors\n",
     "import tensorflow as tf\n",
     "from scipy.linalg import block_diag\n",
     "tf.logging.set_verbosity(tf.logging.ERROR)\n",
