isolated matplotlib contexts, updated tqdm to use tqdm_auto, moved mades.py contents to ndes.py, flattened pydelfi/ directory structure, moved simulators to examples/

--- a/examples/jla_sne.ipynb
+++ b/examples/jla_sne.ipynb
@@ -22,11 +22,11 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pydelfi.simulators.jla_supernovae.jla_simulator as jla\n",
+    "import simulators.jla_supernovae.jla_simulator as jla\n",
     "import pydelfi.ndes.ndes as ndes\n",
     "import pydelfi as delfi\n",
-    "import pydelfi.compression.score.score as score\n",
-    "import pydelfi.distributions.priors as priors\n",
+    "import pydelfi.score as score\n",
+    "import pydelfi.priors as priors\n",
     "import tensorflow as tf\n",
     "tf.logging.set_verbosity(tf.logging.ERROR)\n",
     "%matplotlib inline"
