--- a/examples/cosmic_shear.ipynb
+++ b/examples/cosmic_shear.ipynb
@@ -2,28 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pydelfi.distributions.priors as priors\n",
     "import getdist\n",
     "from getdist import plots, MCSamples\n",
-    "import pydelfi.ndes.ndes as ndes\n",
-    "import pydelfi as delfi\n",
+    "import pydelfi.priors as priors\n",
+    "import pydelfi.ndes as ndes\n",
+    "import pydelfi.delfi as delfi\n",
     "import tensorflow as tf\n",
-    "import pydelfi.simulators.cosmic_shear.cosmic_shear as cosmic_shear\n",
+    "import simulators.cosmic_shear.cosmic_shear as cosmic_shear\n",
     "import pickle\n",
-    "import pydelfi.compression.score.score as score\n",
+    "import pydelfi.score as score\n",
     "tf.logging.set_verbosity(tf.logging.ERROR)\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
