--- a/examples/jla_sne_marginalized.ipynb
+++ b/examples/jla_sne_marginalized.ipynb
@@ -9,18 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.interpolate as interpolate\n",
-    "import pydelfi.simulators.jla_supernovae.jla_simulator as jla\n",
-    "import pydelfi.ndes.ndes as ndes\n",
-    "import pydelfi as delfi\n",
-    "import pydelfi.compression.score.score as score\n",
-    "import pydelfi.distributions.priors as priors\n",
+    "import simulators.jla_supernovae.jla_simulator as jla\n",
+    "import pydelfi.ndes as ndes\n",
+    "import pydelfi.delfi as delfi\n",
+    "import pydelfi.score as score\n",
+    "import pydelfi.priors as priors\n",
     "import tensorflow as tf\n",
     "from scipy.linalg import block_diag\n",
     "tf.logging.set_verbosity(tf.logging.ERROR)\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,9 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/justinalsing/Dropbox/science/pydelfi/examples/simulators/jla_supernovae/jla_parser.py:9: VisibleDeprecationWarning: Reading unicode strings without specifying the encoding argument is deprecated. Set the encoding, use None for the system default.\n",
+      "  dtype = None, names = True)\n"
+     ]
+    }
+   ],
    "source": [
     "JLASimulator = jla.JLA_Model()\n",
     "\n",
