fixed bug in jla marginal notebook

--- a/examples/jla_sne_marginalized.ipynb
+++ b/examples/jla_sne_marginalized.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,18 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/justinalsing/Dropbox/science/pydelfi/examples/simulators/jla_supernovae/jla_parser.py:9: VisibleDeprecationWarning: Reading unicode strings without specifying the encoding argument is deprecated. Set the encoding, use None for the system default.\n",
-      "  dtype = None, names = True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "JLASimulator = jla.JLA_Model()\n",
     "\n",
@@ -215,7 +206,7 @@
     "n_batch = 100\n",
     "n_populations = 11\n",
     "\n",
-    "DelfiEnsemble.sequential_training(simulator, compressor, n_initial, n_batch, n_populations, patience=10, simulator_args=simulator_args)"
+    "DelfiEnsemble.sequential_training(simulator, compressor, n_initial, n_batch, n_populations, patience=10, simulator_args=simulator_args, compressor_args=compressor_args)"
    ]
   }
  ],
