updated all priors in examples to tfd, updated versions of requirements in setup.py, updated saver() function in delfi.py

--- a/examples/cosmic_shear_prerun_sims.ipynb
+++ b/examples/cosmic_shear_prerun_sims.ipynb
@@ -25,7 +25,9 @@
     "import priors as priors\n",
     "import ndes as ndes\n",
     "import delfi as delfi\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "import tensorflow_probability as tfp\n",
+    "tfd = tfp.distributions"
    ]
   },
   {
@@ -47,7 +49,7 @@
    "source": [
     "lower = np.array([0, 0.4, 0, 0.4, 0.7])\n",
     "upper = np.array([1, 1.2, 0.1, 1.0, 1.3])\n",
-    "prior = priors.Uniform(lower, upper)"
+    "prior = tfd.Blockwise([tfd.Uniform(low=lower[i], high=upper[i]) for i in range(5)])"
    ]
   },
   {
