--- a/examples/cosmic_shear.ipynb
+++ b/examples/cosmic_shear.ipynb
@@ -28,7 +28,9 @@
     "import tensorflow as tf\n",
     "import simulators.cosmic_shear.cosmic_shear as cosmic_shear\n",
     "import pickle\n",
-    "import score as score"
+    "import score as score\n",
+    "import tensorflow_probability as tfp\n",
+    "tfd = tfp.distributions"
    ]
   },
   {
@@ -72,8 +74,9 @@
     "upper = np.array([1, 1.2, 0.1, 1.0, 1.3])\n",
     "prior_mean = np.array([0.3, 0.8, 0.05, 0.70, 0.96])\n",
     "prior_covariance = np.eye(5)*np.array([0.1, 0.1, 0.05, 0.3, 0.3])**2\n",
+    "prior_stddev = np.sqrt(np.diag(prior_covariance))\n",
     "\n",
-    "prior = priors.TruncatedGaussian(prior_mean, prior_covariance, lower, upper)"
+    "prior = tfd.Blockwise([tfd.TruncatedNormal(loc=prior_mean[i], scale=prior_stddev[i], low=lower[i], high=upper[i]) for i in range(5)])"
    ]
   },
   {
