--- a/examples/jla_sne_marginalized.ipynb
+++ b/examples/jla_sne_marginalized.ipynb
@@ -23,8 +23,8 @@
     "import pydelfi.priors as priors\n",
     "import tensorflow as tf\n",
     "from scipy.linalg import block_diag\n",
-    "tf.logging.set_verbosity(tf.logging.ERROR)\n",
-    "%matplotlib inline"
+    "import tensorflow_probability as tfp\n",
+    "tfd = tfp.distributions"
    ]
   },
   {
@@ -43,11 +43,11 @@
    "source": [
     "lower = np.array([0, -1.5])\n",
     "upper = np.array([0.6, 0])\n",
-    "prior = priors.Uniform(lower, upper)\n",
+    "prior = tfd.Blockwise([tfd.Uniform(low=lower[i], high=upper[i]) for i in range(2)])\n",
     "\n",
     "eta_lower = np.array([-20, 0, 0, -0.5])\n",
     "eta_upper = np.array([-18, 1, 6, 0.5])\n",
-    "eta_prior = priors.Uniform(eta_lower, eta_upper)"
+    "eta_prior = tfd.Blockwise([tfd.Uniform(low=eta_lower[i], high=eta_upper[i]) for i in range(4)])"
    ]
   },
   {
@@ -71,7 +71,7 @@
     "def simulator(theta, seed, simulator_args, batch):\n",
     "    \n",
     "    eta_prior = simulator_args[0]\n",
-    "    eta = eta_prior.draw()\n",
+    "    eta = eta_prior.sample().numpy()\n",
     "    \n",
     "    return JLASimulator.simulation(np.concatenate([theta, eta]), seed)\n",
     "\n",
