edited setup.py and examples

--- a/examples/cosmic_shear_prerun_sims.ipynb
+++ b/examples/cosmic_shear_prerun_sims.ipynb
@@ -15,7 +15,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /Users/justinalsing/Dropbox/science/pydelfi-tf1-test/pydelfi/pydelfi/train.py:9: The name tf.train.AdamOptimizer is deprecated. Please use tf.compat.v1.train.AdamOptimizer instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -398,7 +407,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "posterior_samples = DelfiEnsemble.emcee_sample()"
+    "posterior_samples, posterior_weights, log_prob = DelfiEnsemble.emcee_sample()"
    ]
   },
   {
@@ -439,7 +448,7 @@
     }
    ],
    "source": [
-    "DelfiEnsemble.triangle_plot(samples=[posterior_samples])"
+    "DelfiEnsemble.triangle_plot(samples=[posterior_samples], weights=[posterior_weights])"
    ]
   }
  ],
@@ -459,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
